# voice-anonymization

./: .gitignore  BASE_README.md  BLEND_GUIDE.md  README.md  pyproject.toml  test_low_blend.py  test_transformation.py  test_transformation_detailed.py  voice_anonymizer.spec
models/: avg_model.json
packaging/: voice_anonymizer.spec
scripts/: build_windows_exe.py
src/voice_anonymizer/: __init__.py  __main__.py  audio_capture.py  audio_output.py  config.py  main.py  model_loader.py  transform.py  transformation_engine.py  visualizer.py
tests/: conftest.py  test_audio_io.py  test_config.py  test_main.py  test_model_loader.py  test_transformation_engine.py
