[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-anonymization"
version = "0.1.0"
description = "Real-time voice anonymization engine"
authors = [{name = "Voice Anonymization Team"}]
dependencies = [
    "numpy>=1.23",
    "sounddevice>=0.4",
]
requires-python = ">=3.10"

[project.optional-dependencies]
full = [
    "pyinstaller>=5",
    "pyworld>=0.3",
]
tests = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
voice-anonymizer = "voice_anonymizer.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
