[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-anonymization"
version = "0.1.0"
description = "Simple audio passthrough (base branch)"
authors = [{name = "Voice Anonymization Team"}]
dependencies = [
    "numpy>=1.23",
    "sounddevice>=0.4",
]
requires-python = ">=3.10"

[project.scripts]
voice-anonymizer = "voice_anonymizer.main:run"

[tool.setuptools.packages.find]
where = ["src"]
